frontend/test/should_fail/disallow_action_package_declaration_of_builtin_Math_package.grg
package Math
{
}

test t
{
//	if { Math::min(0, 1) != 42; }
}
